--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo:latest
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
+     # uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -31,13 +31,13 @@ jobs:
       
    
 
-#  Test:
-#    needs: Build
-#    runs-on: ubuntu-latest
-#    steps:
-   # 
-#    - name: run & test Container
-#      run: docker run -itd --name python-hello -p 8080   my-image-name:latest
+  Test:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+    
+    - name: run & test Container
+      run: docker run -itd --name python-hello -p 8080   my-image-name:latest
  
   
  
