--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,14 +31,10 @@ jobs:
       
    
 
-  Test:
-    needs: Build
-    runs-on: ubuntu-latest
-    steps:
+    - Test:
+      needs: Build
+      runs-on: ubuntu-latest
+      steps:
     
     - name: run & test Container
       run: docker run -itd --name python-hello -p 8080   my-image-name:latest
- 
-  
- 
-    
