--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,19 +22,17 @@ jobs:
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo:latest
     - name: Login to Docker Hub
-     # uses: docker/login-action@v2
+      uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: docker push
       run: docker push lordagam/github-repo:latest
       
-   
-
-    - Test:
-      needs: Build
-      runs-on: ubuntu-latest
-      steps:
+ #   - Test:
+ #     needs: Build
+ #     runs-on: ubuntu-latest
+ #     steps:
     
     - name: run & test Container
       run: docker run -itd --name python-hello -p 8080   my-image-name:latest
