--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,14 +20,14 @@ jobs:
       run: docker run -itd --name python-hello -p 8080:8080   my-image-name:latest
     - run: sleep 5 && curl localhost:8080
     - name: change image name 
-      run: docker tag my-image-name:latest lordagam/github-repo:latest
+      run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: docker push
-      run: docker push lordagam/github-repo:latest
+      run: docker push lordagam/github-repo-hello-world-war5:latest
       
  #   - Test:
  #     needs: Build
