--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container
-      run: docker run -itd --name war-lidor -p 80:8080 lordagam/app-java:latest
+      run: docker run -itd --name war-lidor -p 80:8080 my-image-name:latest
     - run: sleep 90 && curl localhost:8080
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
