--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,12 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:latest
-    - name: run & test Container
-      run: docker run -itd --name war-lidor -p 80:8080 my-image-name:latest
-    - run: sleep 90 && curl localhost:8080
+  #  - uses: actions/checkout@v3
+  #  - name: Build the Docker image
+  #    run: docker build . --file Dockerfile --tag my-image-name:latest
+  #  - name: run & test Container
+  #    run: docker run -itd --name war-lidor -p 80:8080 my-image-name:latest
+  #  - run: sleep 90 && curl localhost:8080
+  
+    - uses: actions/checkout@v4
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots verify
+
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
     - name: Login to Docker Hub
