--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container
       run: docker run -itd --name war-lidor -p 80:8080 my-image-name:latest
-    - run: sleep 90 && curl localhost:8080
+   # - run: sleep 90 && curl localhost:8080
 
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
