--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,10 +32,10 @@ jobs:
 
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:latest
+      run: docker build -t . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container
-      run: docker run -itd --name war-lidor -p 80:8080 my-image-name:latest
-    - run: sleep 90 && curl http://localhost:8080
+      run: docker run -itd --name war-tomer-and-jo -p 80:8080 my-image-name:latest
+    - run: sleep 30 && curl localhost:8080
 
     - name: change image name 
       run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
