--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
 
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build -t . --file Dockerfile --tag my-image-name:latest
+      run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container
       run: docker run -itd --name war-tomer-and-jo -p 80:8080 my-image-name:latest
     - run: sleep 30 && curl localhost:8080
