--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:latest
+    - name: run & test Container
+      run: docker run -itd --name war-tomer-and-jo -p 80:8080 my-image-name:latest
+    - run: sleep 30 && curl localhost:8080
    
   publish-job:
     runs-on: ubuntu-latest
