--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,9 +39,27 @@ jobs:
       with:
         name: Package
         path: hello-world-war5
+    - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container
       run: docker run -itd --name war-tomer-and-jo -p 80:8080 my-image-name:latest
-    - run: sleep 30 && curl http://127.0.0.1:8080/hello-world-war5/;
+    - run: sleep 30 && curl localhost:8080
+
+    - name: change image name 
+      run: docker tag my-image-name:latest lordagam/github-repo-hello-world-war5:latest
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: docker push
+      run: docker push lordagam/github-repo-hello-world-war5:latest
+
+        
+   # - name: Build the Docker image
+   #   run: docker build . --file Dockerfile --tag my-image-name:latest
+   # - name: run & test Container
+   #   run: docker run -itd --name war-tomer-and-jo -p 80:8080 my-image-name:latest
+   # - run: sleep 30 && curl http://127.0.0.1:8080/hello-world-war5/;
     
