--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,5 +40,5 @@ jobs:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/checkout@v3
+        uses: actions/deploy-pages@v1
        # uses: actions/deploy-pages@v2
