--- a/.github/workflows/Deploy hello-world-war5.yml
+++ b/.github/workflows/Deploy hello-world-war5.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy hello-world-war5
 
 on:
   # Runs on pushes targeting the default branch
